test/libsolidity/syntaxTests/abstract/abstract_contract_because_of_interface.sol
interface A {
    function utterance() external returns (bytes32);
}
contract B is A {
}
// ----
// TypeError: (69-88): Contract "B" should be marked as abstract.
